--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -50,7 +50,7 @@ jobs:
     - name: whl artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: whl-${{ matrix.python-version }}
-        path: dist/asyncio-1.0-py3-none-any.whl
+        name: cpClientServer-1.0-py3-none-any.whl
+        path: dist/tcpClientServer-1.0-py3-none-any.whl
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
